--- a/curs1/ap9.html
+++ b/curs1/ap9.html
@@ -7,11 +7,19 @@
 </head>
 <body>
     <script>
-        let x=6
+       /* let x=6
         console.log('x este', typeof x)
         let y="6"
         console.log('y este', typeof y)
-        console.log("compara x si y", x===y)
+        console.log("compara x si y", x===y)*/
+
+        let a=10; b=30;
+        let c="40";
+        console.log('suma este', a+b)
+        console.log('produsul este', a*b)
+        console.log('a doua suma este', a+c)
+        console.log('al doile produs este', a*c)
+        console.log("restul impartirii lui b la a este", b%a)
 
     </script> 
 </body>
