--- a/Curs 2/ap4.html
+++ b/Curs 2/ap4.html
@@ -7,14 +7,22 @@
 </head>
 <body>
 <script>
-    let x = 42,y = 237;
+
+
+let x = 42,y = 237;
     if(x>y){
         console.log('Maximul este',x);
     }
     else{
         console.log('Maximul este ', y);
     }
+
+    // ACELASI LUCRU DAR SCRIS MAI RESTRANS 
+
     (x>y)? console.log('Maximul este',x): console.log('Maximul este',y);
+
+
+
 </script>
 </body>
 </html>
