--- a/Curs 2/ap5.html
+++ b/Curs 2/ap5.html
@@ -13,6 +13,7 @@
         }
         else{
             console.log(`Numarul introdus ${x} este impar`)
+            conmsole.log("Numarul introdus" + x + " este impar");
         }
     </script>
 </body>
