--- a/Curs 2/ap7.html
+++ b/Curs 2/ap7.html
@@ -8,7 +8,7 @@
 <body>
     <script>
        var d = new Date();
-       theDay = 14;//d.getDay();
+       theDay = d.getDay();
       /* switch (theDay) 
        {
         case 1: document.write("<b> Luni </b>"); break;
